--- a/wp-content/themes/gamechat/scss/variables/_colors.scss
+++ b/wp-content/themes/gamechat/scss/variables/_colors.scss
@@ -1,13 +1,8 @@
-﻿// General page color variables
+﻿$default-text-color:        #222222;
+$highlight-text-color:      #555555;
+$text-color-lighter:        #FFFFFF;
 
-$background-color:              #222222;
-$background-color-lighter:      #555555;
-$background-color-light:        #EEEEEE;
-$background-color-btn:          #F14A29;
-$background-color-btn-hover:    #CD4023;
+$accent-color:              #6B717D;
+$hightlight-accent-color:   #878E9A;
 
-$border-color:                  #888888;
-$border-color-lighter:          #DDDDDD;
-
-$text-color:                    #FFFFFF;
-$header-color:                  #FFFFFF;
+$icon-color:                #446C97;
