--- a/wp-content/themes/gamechat/scss/mixins/_mixins-master.scss
+++ b/wp-content/themes/gamechat/scss/mixins/_mixins-master.scss
@@ -30,3 +30,10 @@
     -o-transition: $string;
     -webkit-transition: $string;
 }
+
+@mixin boxshadow($string: null, $position: outset)
+{
+    box-shadow: $string $position;
+    -webkit-box-shadow: $string $position;
+    -moz-box-shadow: $string $position;
+}
