--- a/wp-content/themes/gamechat/scss/style.scss
+++ b/wp-content/themes/gamechat/scss/style.scss
@@ -23,6 +23,8 @@
 --------------------------------------------------------------*/
 @import "bootstrap";
 
+@import "font-awesome/font-awesome";
+
 /*--------------------------------------------------------------
 # Variables
 --------------------------------------------------------------*/
