--- a/wp-content/themes/gamechat/scss/navigation/_header.scss
+++ b/wp-content/themes/gamechat/scss/navigation/_header.scss
@@ -16,6 +16,12 @@
     min-height: 80px;
 	z-index: 100;
 
+    .icon-bar
+    {
+        background: $default-text-color;
+
+    }
+
     .navbar.navbar-default.container-fluid
     {
         border-radius: 0px;
